--- a/README.org
+++ b/README.org
@@ -20,4 +20,7 @@ https://github.com/FooDeas/raspberrypi-ua-netinst
 
 * Steps
 
-** Step -1
+** Step - 1
+[[https://github.com/FooDeas/raspberrypi-ua-netinst/releases/latest][Download the .zip file]].
+ 
+** Step - 2
