--- a/readme.org
+++ b/readme.org
@@ -25,4 +25,6 @@ https://github.com/FooDeas/raspberrypi-ua-netinst
 2. Unzip and copy to USB drive
  
 ** Step 2: Apply custom install configuration
-1. Add [https://github.com/daljitdokal/raspbian-minimal-setup/blob/main/installer-config.txt][installer-config.txt]]
+1. Go to "<USB DRIVE>\raspberrypi-ua-netinst\config\"
+2. Replace [https://github.com/daljitdokal/raspbian-minimal-setup/blob/main/installer-config.txt][installer-config.txt]]
+3. Update "Login user" details and "Wifi" details
