--- a/readme.org
+++ b/readme.org
@@ -22,9 +22,13 @@ https://github.com/FooDeas/raspberrypi-ua-netinst
 
 ** Step 1: Download Raspbian
 1. [[https://github.com/FooDeas/raspberrypi-ua-netinst/releases/latest][Download the .zip file]].
-2. Unzip and copy to USB drive
+2. Unzip the .zip file
  
 ** Step 2: Apply custom install configuration
 1. Go to "<USB DRIVE>\raspberrypi-ua-netinst\config\"
 2. Replace [[https://github.com/daljitdokal/raspbian-minimal-setup/blob/main/installer-config.txt][installer-config.txt]]
 3. Update "Login user" details and "Wifi" details
+
+** Step 3: Copy the install media to sd card
+1. Copy everthing to USB Drive
+2. Add memory card to Raspberrt Pi and turn on to start trhe boot process
